Fix spacing below filters on Windows Mobile

--- a/less/plugins/ecommerce/products-listing.less
+++ b/less/plugins/ecommerce/products-listing.less
@@ -64,7 +64,7 @@
 
 
 .ecomproductslist__fieldset--filters {
-
+    min-height: 20px; // IE Flexbox fix
 }
 
 
